# abfahrt

./: .gitignore  README.md  config.hardware.yaml  config.yaml  generate_demo_gif.py  plan.md  pyproject.toml  requirements.txt
fonts/: LICENSE
src/abfahrt/: __main__.py  api.py  app.py  config.py  display.py  models.py  renderer.py  ssd1322_display.py  weather.py
src/infodisplay/: __main__.py  api.py  app.py  config.py  display.py  models.py  renderer.py  ssd1322_display.py  weather.py
systemd/: README.md  abfahrt-watchdog.service  abfahrt-watchdog.timer  abfahrt.service  healthcheck.sh
tests/: conftest.py  test_api.py  test_config.py  test_display.py  test_models.py  test_renderer.py
